crates/plantuml-core/tests/snapshots/class_tests__composition_aggregation.snap
---
source: crates/plantuml-core/tests/class_tests.rs
assertion_line: 110
expression: svg
---
<?xml version="1.0" encoding="UTF-8"?>
<svg height="250" viewBox="15 15 340 250" width="340" xmlns="http://www.w3.org/2000/svg">
<defs>
<marker id="arrow" markerHeight="8" markerUnits="userSpaceOnUse" markerWidth="10" orient="auto" refX="10" refY="4">
<path d="M0,0 L10,4 L0,8 L4,4 Z" fill="#181818"/>
</marker>
<marker id="arrow-open" markerHeight="8" markerUnits="userSpaceOnUse" markerWidth="10" orient="auto" refX="10" refY="4">
<path d="M0,0 L10,4 L0,8" fill="none" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="inheritance" markerHeight="20" markerUnits="userSpaceOnUse" markerWidth="20" orient="auto" refX="20" refY="10">
<path d="M0,0 L20,10 L0,20 Z" fill="#FFFFFF" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="composition" markerHeight="12" markerUnits="userSpaceOnUse" markerWidth="12" orient="auto" refX="0" refY="6">
<path d="M0,6 L6,0 L12,6 L6,12 Z" fill="#181818"/>
</marker>
<marker id="aggregation" markerHeight="12" markerUnits="userSpaceOnUse" markerWidth="12" orient="auto" refX="0" refY="6">
<path d="M0,6 L6,0 L12,6 L6,12 Z" fill="#FFFFFF" stroke="#181818" stroke-width="1"/>
</marker>
</defs>
<g id="Car">
<rect fill="#E2E2F0" height="80" rx="2.5" ry="2.5" stroke="#181818" stroke-width="0.5" width="120" x="105" y="20"/>
<ellipse cx="121" cy="36" fill="#ADD1B2" rx="11" ry="11" stroke="#181818" stroke-width="1"/>
<text fill="#000000" font-family="sans-serif" font-size="12" font-weight="bold" text-anchor="middle" x="121" y="40">
C
</text>
<text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" x="137" y="39">
Car
</text>
<line stroke="#181818" stroke-width="0.5" x1="106" x2="224" y1="46" y2="46"/>
<ellipse cx="113" cy="59" fill="#C82829" rx="3" ry="3" stroke="#C80000" stroke-width="1"/>
<text fill="#000000" font-family="sans-serif" font-size="14" x="121" y="63">
engine: Engine
</text>
<ellipse cx="113" cy="75" fill="#C82829" rx="3" ry="3" stroke="#C80000" stroke-width="1"/>
<text fill="#000000" font-family="sans-serif" font-size="14" x="121" y="79">
wheels: List&lt;Wheel&gt;
</text>
<line stroke="#181818" stroke-width="0.5" x1="106" x2="224" y1="83" y2="83"/>
</g>
<g id="Engine">
<rect fill="#E2E2F0" height="60" rx="2.5" ry="2.5" stroke="#181818" stroke-width="0.5" width="120" x="20" y="160"/>
<ellipse cx="36" cy="176" fill="#ADD1B2" rx="11" ry="11" stroke="#181818" stroke-width="1"/>
<text fill="#000000" font-family="sans-serif" font-size="12" font-weight="bold" text-anchor="middle" x="36" y="180">
C
</text>
<text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" x="52" y="179">
Engine
</text>
<line stroke="#181818" stroke-width="0.5" x1="21" x2="139" y1="186" y2="186"/>
<ellipse cx="28" cy="199" fill="#C82829" rx="3" ry="3" stroke="#C80000" stroke-width="1"/>
<text fill="#000000" font-family="sans-serif" font-size="14" x="36" y="203">
power: int
</text>
<line stroke="#181818" stroke-width="0.5" x1="21" x2="139" y1="207" y2="207"/>
</g>
<g id="Wheel">
<rect fill="#E2E2F0" height="60" rx="2.5" ry="2.5" stroke="#181818" stroke-width="0.5" width="120" x="190" y="160"/>
<ellipse cx="206" cy="176" fill="#ADD1B2" rx="11" ry="11" stroke="#181818" stroke-width="1"/>
<text fill="#000000" font-family="sans-serif" font-size="12" font-weight="bold" text-anchor="middle" x="206" y="180">
C
</text>
<text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" x="222" y="179">
Wheel
</text>
<line stroke="#181818" stroke-width="0.5" x1="191" x2="309" y1="186" y2="186"/>
<ellipse cx="198" cy="199" fill="#C82829" rx="3" ry="3" stroke="#C80000" stroke-width="1"/>
<text fill="#000000" font-family="sans-serif" font-size="14" x="206" y="203">
size: int
</text>
<line stroke="#181818" stroke-width="0.5" x1="191" x2="309" y1="207" y2="207"/>
</g>
<g id="edge_Car_Engine">
<path d="M165,100 L165,130 L80,130 L80,160" fill="none" marker-start="url(#composition)" stroke="#181818" stroke-width="1"/>
<text dominant-baseline="auto" fill="#000000" font-family="sans-serif" font-size="13" text-anchor="middle" x="122.5" y="125">
contains
</text>
</g>
<g id="edge_Car_Wheel">
<path d="M165,100 L165,130 L250,130 L250,160" fill="none" marker-start="url(#aggregation)" stroke="#181818" stroke-width="1"/>
<text dominant-baseline="auto" fill="#000000" font-family="sans-serif" font-size="13" text-anchor="middle" x="207.5" y="125">
has
</text>
</g>
</svg>
