crates/plantuml-core/tests/snapshots/class_tests__inheritance.snap
---
source: crates/plantuml-core/tests/class_tests.rs
assertion_line: 56
expression: svg
---
<?xml version="1.0" encoding="UTF-8"?>
<svg height="250" viewBox="15 15 340 250" width="340" xmlns="http://www.w3.org/2000/svg">
<defs>
<marker id="arrow" markerHeight="8" markerUnits="userSpaceOnUse" markerWidth="10" orient="auto" refX="10" refY="4">
<path d="M0,0 L10,4 L0,8 L4,4 Z" fill="#181818"/>
</marker>
<marker id="arrow-open" markerHeight="8" markerUnits="userSpaceOnUse" markerWidth="10" orient="auto" refX="10" refY="4">
<path d="M0,0 L10,4 L0,8" fill="none" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="inheritance" markerHeight="20" markerUnits="userSpaceOnUse" markerWidth="20" orient="auto" refX="20" refY="10">
<path d="M0,0 L20,10 L0,20 Z" fill="#FFFFFF" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="composition" markerHeight="12" markerUnits="userSpaceOnUse" markerWidth="12" orient="auto" refX="0" refY="6">
<path d="M0,6 L6,0 L12,6 L6,12 Z" fill="#181818"/>
</marker>
<marker id="aggregation" markerHeight="12" markerUnits="userSpaceOnUse" markerWidth="12" orient="auto" refX="0" refY="6">
<path d="M0,6 L6,0 L12,6 L6,12 Z" fill="#FFFFFF" stroke="#181818" stroke-width="1"/>
</marker>
</defs>
<g id="Animal">
<rect fill="#E2E2F0" height="60" rx="2.5" ry="2.5" stroke="#181818" stroke-width="0.5" width="120" x="105" y="20"/>
<ellipse cx="121" cy="36" fill="#ADD1B2" rx="11" ry="11" stroke="#181818" stroke-width="1"/>
<text fill="#000000" font-family="sans-serif" font-size="12" font-weight="bold" text-anchor="middle" x="121" y="40">
C
</text>
<text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" x="137" y="39">
Animal
</text>
<line stroke="#181818" stroke-width="0.5" x1="106" x2="224" y1="46" y2="46"/>
<line stroke="#181818" stroke-width="0.5" x1="106" x2="224" y1="51" y2="51"/>
<ellipse cx="113" cy="64" fill="#84BE84" rx="3" ry="3" stroke="#038048" stroke-width="1"/>
<text fill="#000000" font-family="sans-serif" font-size="14" x="121" y="68">
eat()
</text>
</g>
<g id="Dog">
<rect fill="#E2E2F0" height="60" rx="2.5" ry="2.5" stroke="#181818" stroke-width="0.5" width="120" x="20" y="160"/>
<ellipse cx="36" cy="176" fill="#ADD1B2" rx="11" ry="11" stroke="#181818" stroke-width="1"/>
<text fill="#000000" font-family="sans-serif" font-size="12" font-weight="bold" text-anchor="middle" x="36" y="180">
C
</text>
<text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" x="52" y="179">
Dog
</text>
<line stroke="#181818" stroke-width="0.5" x1="21" x2="139" y1="186" y2="186"/>
<line stroke="#181818" stroke-width="0.5" x1="21" x2="139" y1="191" y2="191"/>
<ellipse cx="28" cy="204" fill="#84BE84" rx="3" ry="3" stroke="#038048" stroke-width="1"/>
<text fill="#000000" font-family="sans-serif" font-size="14" x="36" y="208">
bark()
</text>
</g>
<g id="Cat">
<rect fill="#E2E2F0" height="60" rx="2.5" ry="2.5" stroke="#181818" stroke-width="0.5" width="120" x="190" y="160"/>
<ellipse cx="206" cy="176" fill="#ADD1B2" rx="11" ry="11" stroke="#181818" stroke-width="1"/>
<text fill="#000000" font-family="sans-serif" font-size="12" font-weight="bold" text-anchor="middle" x="206" y="180">
C
</text>
<text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" x="222" y="179">
Cat
</text>
<line stroke="#181818" stroke-width="0.5" x1="191" x2="309" y1="186" y2="186"/>
<line stroke="#181818" stroke-width="0.5" x1="191" x2="309" y1="191" y2="191"/>
<ellipse cx="198" cy="204" fill="#84BE84" rx="3" ry="3" stroke="#038048" stroke-width="1"/>
<text fill="#000000" font-family="sans-serif" font-size="14" x="206" y="208">
meow()
</text>
</g>
<g id="edge_Animal_Dog">
<path d="M80,160 L80,120 L165,120 L165,80" fill="none" marker-end="url(#inheritance)" stroke="#181818" stroke-width="1"/>
</g>
<g id="edge_Animal_Cat">
<path d="M250,160 L250,120 L165,120 L165,80" fill="none" marker-end="url(#inheritance)" stroke="#181818" stroke-width="1"/>
</g>
</svg>
